[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratelimitx"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Ryan Kroon", email = "rykroon.tech@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  # "Programming Language :: Python :: 3.7",
  # "Programming Language :: Python :: 3.8",
  # "Programming Language :: Python :: 3.9",
  # "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "redis==4.5.*"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/ratelimitx#readme"
Issues = "https://github.com/unknown/ratelimitx/issues"
Source = "https://github.com/unknown/ratelimitx"

[tool.hatch.version]
path = "ratelimitx/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=ratelimitx --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "ratelimitx/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
