[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratelimitx"
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Ryan Kroon", email = "rykroon.tech@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  # "Programming Language :: Python :: 3.7",
  # "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "redis>=4.4"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/rykroon/ratelimitx#readme"
Issues = "https://github.com/rykroon/ratelimitx/issues"
Source = "https://github.com/rykroon/ratelimitx"

[tool.hatch.version]
path = "ratelimitx/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-asyncio",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.coverage.run]
source_pkgs = ["ratelimitx", "tests"]
branch = true
parallel = true
omit = [
  "ratelimitx/__about__.py",
]

[tool.coverage.paths]
foobar = ["src/ratelimitx", "*/ratelimitx/src/ratelimitx"]
tests = ["tests", "*/ratelimitx/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
